--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "lara-zeus/accordion",
+    "name": "bobimicroweber/accordion",
     "description": "Zeus Accordion is filamentphp layout component to group components",
     "keywords": [
         "laravel",
